Feature: added teaching assistance experience.

--- a/rse_cv.tex
+++ b/rse_cv.tex
@@ -342,7 +342,7 @@
 \section{Research Experience}
 
 \begin{onecolentry}
-  \textbf{Graduate Research Assistant } \hfill \textit{September 2021 - Present}\\
+  \textbf{Graduate Research Assistant} \hfill \textit{September 2022 - Present}\\
   \textit{Department of Physics, URI}
   
   \vspace{0.1 cm}
@@ -382,14 +382,36 @@
   \textit{Center for Research Computing, Yale University}
 
   \begin{highlights}
-    \item Built GloVe word embedding model on 5.8M Wikipedia articles, achieving 80\% accuracy 
-    on semantic and syntactic analogy benchmarks
-    \item Engineered large-scale text processing pipeline on MGHPCC Unity cluster: XML-JSON 
-    conversion, batch processing (10K articles/file), distributed extraction using Gensim and Spacy
+    \item Supported researchers in adopting ML and data processing workflows on MGHPCC Unity 
+    HPC infrastructure
+    \item Engineered NLP pipeline processing 5.8M Wikipedia articles: 
+        distributed batch processing (10K articles/batch), XML-JSON conversion, and 
+        text extraction using Gensim and Spacy
+    \item Trained GloVe word embedding model on processed corpus, achieving 
+        80\% accuracy on standard word analogy benchmarks
   \end{highlights}
 \end{onecolentry}
 
 \vspace{0.2 cm}
+
+% ---------- Teaching Experience ----------
+\section{Teaching Experience}
+\begin{onecolentry}
+    \begin{highlightsforbulletentries}
+      \item TA for Elementary Physics II (Fall 2023)
+      \begin{itemize}
+        \item Assisted students with homework assignments and exam preparation by providing guidance and support to 
+        strengthen their understanding of the subject matter.
+      \end{itemize}
+
+      \item TA for AST 108 and AST 118H, introduction to astronomy (Fall 2021 - Spring 2022)
+      \begin{itemize}
+        \item Conducted interactive sessions to clarify doubts and reinforce understanding of the course material.
+        \item Organized both telescope-assisted and unaided observation sessions to guide students in identifying 
+        celestial objects, including planets, stars, and constellations.
+      \end{itemize}   
+    \end{highlightsforbulletentries}
+\end{onecolentry}
 
 % ---- Publications ----
 \section{Selected Publications (Software \& Methods Focus)}
