Refactor: rename general_resume to rse_resume

--- a/rse_resume.tex
+++ b/rse_resume.tex
@@ -161,7 +161,7 @@
         Gaussian Process Regression~(GPR) for conservative parameter estimation}
         \resumeItem{Research expertise in surrogate modeling, uncertainty quantification, and Bayesian inference for 
         GW analysis}
-        \resumeItem{Mentored students in computational modeling and HPC workflows}
+        % \resumeItem{Mentored students in computational modeling and HPC workflows}
       \resumeItemListEnd
       
 % -----------Multiple Positions Heading-----------
@@ -178,13 +178,12 @@
       {Research Computing Facilitator trainee (NSF CAREERS)}{May 2022 - August 2022}
       {Yale University}{}
       \resumeItemListStart
-        \resumeItem{Supported researchers in adopting ML and data processing workflows on 
-        MGHPCC Unity HPC infrastructure}
-        \resumeItem{Engineered NLP pipeline processing 5.8M Wikipedia articles: 
-        distributed batch processing (10K articles/batch), XML-JSON conversion, and 
-        text extraction using Gensim and Spacy}
+        \resumeItem{Engineered NLP pipeline processing 5.8M Wikipedia articles on MGHPCC Unity 
+        cluster; implemented distributed batch processing, XML-JSON conversion, and text extraction 
+        using Gensim and SpaCy}
         \resumeItem{Trained GloVe word embedding model on processed corpus, achieving 
         80\% accuracy on standard word analogy benchmarks}
+
     \resumeItemListEnd
 
   \resumeSubHeadingListEnd
@@ -194,12 +193,14 @@
 \section{Projects \& Software Development}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Deep Learning for Anti-Money Laundering} $|$ \emph{PyTorch, GNNs}}{Fall 2025}
+          {\textbf{Anti-Money Laundering Detection with Temporal-GNNs} $|$ \emph{PyTorch, GNNs}}{Fall 2025}
           \resumeItemListStart
-            \resumeItem{Built scalable data preprocessing and graph neural network training pipeline for 
-            9.5M transaction dataset with optimized feature extraction}
-            \resumeItem{Achieved 0.84 PR-AUC on highly imbalanced dataset~(0.15\%), 
-            outperforming XGBoost baseline, selected as \textbf{top project} by The Erd\H{o}s Institute}
+            \resumeItem{Developed a Temporal GNN-based fraud detection system to identify money laundering 
+            patterns and behavioral anomalies across a 9.5M-transaction network}
+            \resumeItem{Achieved 0.84 PR-AUC on highly imbalanced data (0.15\% positive rate), 
+            outperforming XGBoost by 41\%}
+            \resumeItem{Optimized model for business constraints—85\% recall at 80\% precision, 
+            selected as \textbf{top project} by The Erd\H{o}s Institute}
           \resumeItemListEnd
 
       \resumeProjectHeading
