Rename: rse_cv to full_cv

--- a/full_cv.tex
+++ b/full_cv.tex
@@ -414,7 +414,7 @@
 \end{onecolentry}
 
 % ---- Publications ----
-\section{Selected Publications (Software \& Methods Focus)}
+\section{Publications}
 
 \begin{enumerate}
     \item \publication{Incorporating waveform calibration error in gravitational-wave modeling and inference for SEOBNRv4}
@@ -427,15 +427,15 @@
           {Physical Review D 110, 124069, December 2024}
           {https://journals.aps.org/prd/abstract/10.1103/PhysRevD.110.124069}
 
-    % \item \publication{Angular Momentum for Black Hole Binaries in Numerical Relativity}
-    %         {\textbf{Ritesh Bachhar}, Richard Price, Gaurav Khanna}
-    %         {Physical Review D 108, 064019, September 2023}
-    %         {https://journals.aps.org/prd/abstract/10.1103/PhysRevD.108.064019}
+    \item \publication{Angular Momentum for Black Hole Binaries in Numerical Relativity}
+            {\textbf{Ritesh Bachhar}, Richard Price, Gaurav Khanna}
+            {Physical Review D 108, 064019, September 2023}
+            {https://journals.aps.org/prd/abstract/10.1103/PhysRevD.108.064019}
 
-    % \item \publication{Timing and spectral studies of Cen X-3 in multiple luminosity states using AstroSat}
-    %       {\textbf{Ritesh Bachhar}, Gayathri Raman, Varun Bhalerao \textit{et al.}}
-    %       {Monthly Notices of the Royal Astronomical Society, 517, 4138, October 2022}
-    %       {https://academic.oup.com/mnras/article/517/3/4138/6760011}
+    \item \publication{Timing and spectral studies of Cen X-3 in multiple luminosity states using AstroSat}
+          {\textbf{Ritesh Bachhar}, Gayathri Raman, Varun Bhalerao \textit{et al.}}
+          {Monthly Notices of the Royal Astronomical Society, 517, 4138, October 2022}
+          {https://academic.oup.com/mnras/article/517/3/4138/6760011}
 \end{enumerate}
 
 \vspace{0.2 cm}
