Capital One data science internship

--- a/ds_resume.tex
+++ b/ds_resume.tex
@@ -123,26 +123,6 @@ surrogate modeling, Bayesian inference, and uncertainty quantification. Experien
 scalable machine learning systems and high-performance computing workflows. Seeking to apply 
 computational and statistical modeling expertise to solve complex, business-driven problems.
 
-%-----------EDUCATION-----------
-\section{Education}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-      {University of Rhode Island}{Aug 2021 -- May 2026}
-      {PhD, Physics $|$ GPA: 3.99/4.00 $|$ Dean's Fellowship (2024 - 2025)}{Kingston, RI}
-      \resumeItemListStart
-        % \resumeItem{Dissertation: Advancing Gravitational Wave Modeling - 
-        % Expanding Parameter Space and Quantifying Uncertainty}
-        \resumeItem{Selected peer reviewed publications on numerical modeling 
-        (arXiv: \href{https://arxiv.org/abs/2407.18319}{\underline{2407.18319}}, 
-        \href{https://arxiv.org/abs/2410.17168}{\underline{2410.17168}})}
-      \resumeItemListEnd
-    \resumeSubheading
-      {Indian Institute of Technology Bombay}{Aug 2018 -- June 2020}
-      {M.Sc. Physics $|$ GPA: 3.67/4.00}{Mumbai, India}
-      \resumeItemListStart
-        \resumeItem{Award: Bhavesh Gandhi Memorial Prize for outstanding performance in M.Sc. Physics (2020)}
-      \resumeItemListEnd
-  \resumeSubHeadingListEnd
 
 %-----------PROGRAMMING SKILLS-----------
 \section{Technical Skills}
@@ -167,7 +147,7 @@ computational and statistical modeling expertise to solve complex, business-driv
           {\textbf{Anti-Money Laundering Detection with Temporal-GNNs} $|$ \emph{PyTorch}}{Sep 2025 - Nov 2025}
           \resumeItemListStart
             \resumeItem{Developed a Temporal GNN-based fraud detection system to identify money laundering 
-            patterns and behavioral anomalies across a 9.5M-transaction network}
+            patterns across 9.5M-transaction network}
             \resumeItem{Achieved 0.84 PR-AUC on highly imbalanced data (0.15\% positive rate), 
             outperforming XGBoost by 41\%}
             \resumeItem{Optimized model for business constraints—85\% recall at 80\% precision, 
@@ -225,11 +205,30 @@ computational and statistical modeling expertise to solve complex, business-driv
         using Gensim and SpaCy}
         \resumeItem{Trained GloVe word embedding model on processed corpus, achieving 
         80\% accuracy on standard word analogy benchmarks}
-
     \resumeItemListEnd
-
   \resumeSubHeadingListEnd
 
+
+%-----------EDUCATION-----------
+\section{Education}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {University of Rhode Island}{Aug 2021 -- Dec 2026}
+      {PhD, Physics $|$ GPA: 3.99/4.00 $|$ Dean's Fellowship (2024 - 2025)}{Kingston, RI}
+      \resumeItemListStart
+        % \resumeItem{Dissertation: Advancing Gravitational Wave Modeling - 
+        % Expanding Parameter Space and Quantifying Uncertainty}
+        \resumeItem{Selected peer reviewed publications on numerical modeling 
+        (arXiv: \href{https://arxiv.org/abs/2407.18319}{\underline{2407.18319}}, 
+        \href{https://arxiv.org/abs/2410.17168}{\underline{2410.17168}})}
+      \resumeItemListEnd
+    \resumeSubheading
+      {Indian Institute of Technology Bombay}{Aug 2018 -- June 2020}
+      {M.Sc. Physics $|$ GPA: 3.67/4.00}{Mumbai, India}
+      \resumeItemListStart
+        \resumeItem{Award: Bhavesh Gandhi Memorial Prize for outstanding performance in M.Sc. Physics (2020)}
+      \resumeItemListEnd
+  \resumeSubHeadingListEnd
 
 
 %-----------AWARDS & HONORS-----------
