Refactor full cv

--- a/full_cv.tex
+++ b/full_cv.tex
@@ -4,9 +4,9 @@
 \usepackage[
     ignoreheadfoot,
     top=1.5 cm,
-    bottom=1.5 cm,
-    left=1.5 cm,
-    right=1.5 cm,
+    bottom=1.7 cm,
+    left=1.7 cm,
+    right=1.7 cm,
     footskip=1.0 cm,
 ]{geometry}
 
@@ -246,49 +246,6 @@
 \end{threecolentry}
 
 
-
-% ---- Technical Expertise ----
-\section{Technical Skills}
-
-\begin{onecolentry}
-  \textbf{Programming Languages:} Python (7+ years), LaTeX, C, Bash, MATLAB, Fortran
-\end{onecolentry}
-
-\vspace{0.2 cm}
-
-\begin{onecolentry}
-  \textbf{Machine Learning:} PyTorch, Gaussian Process Regression (GPR), Graph Neural Networks (GNNs), fastai
-\end{onecolentry}
-
-\vspace{0.2 cm}
-
-\begin{onecolentry}
-  \textbf{High-Performance Computing:} MGHPCC Unity, Slurm workflow orchestration, Parallel computing~(MPI, joblib), 
-  GPU acceleration~(PyTorch, CuPy)
-\end{onecolentry}
-
-\vspace{0.2 cm}
-
-\begin{onecolentry}
-  \textbf{Software Engineering:} Version control~(Git/GitHub), GitHub Actions~(CI/CD),  
-  comprehensive documentation, pytest, Apptainer
-\end{onecolentry}
-
-\vspace{0.2 cm}
-
-\begin{onecolentry}
-  \textbf{Data Analysis \& ML:} Bayesian inference pipelines, Gaussian process regression, SVD-based dimensionality reduction, uncertainty quantification, PyTorch for deep learning applications
-\end{onecolentry}
-
-\vspace{0.2 cm}
-
-\begin{onecolentry}
-  \textbf{Gravitational Wave Software:} \texttt{gwsurrogate}, \texttt{bilby}, \texttt{LALSuite}, 
-  \texttt{GWTools}
-\end{onecolentry}
-
-
-
 % ---- Research Software & Models ----
 \section{Research Software \& Models}
 
@@ -345,7 +302,7 @@
 \vspace{0.2 cm}
 
 \begin{onecolentry}
-  \textbf{Anti-Money Laundering Detection with Temporal-GNNs} \hfill 
+  \textbf{Temporal-GNNs for Anti-Money Laundering Detection} \hfill 
   \textit{September 2025 - March 2025}
   
   \textit{Primary Developer | PyTorch}
@@ -441,6 +398,49 @@
 
 
 
+% ---- Technical Expertise ----
+\section{Technical Skills}
+
+\begin{onecolentry}
+  \textbf{Surrogate Modeling \& Uncertainty Quantification:} SVD-based dimensionality reduction, 
+  Empirical Interpolation Method~(EIM), Greedy algorithms, Probabilistic Surrogate Modeling, Bayesian Inference
+\end{onecolentry}
+
+\vspace{0.2 cm}
+
+\begin{onecolentry}
+  \textbf{Machine Learning:} Gaussian Process Regression~(GPR), Graph Neural Networks~(GNNs), PyTorch, Scikit-learn, 
+  XGBoost
+\end{onecolentry}
+
+\vspace{0.2 cm}
+
+\begin{onecolentry}
+  \textbf{Programming Languages:} Python (7+ years), SQL, Bash, LaTeX, C, MATLAB, Fortran
+\end{onecolentry}
+
+\vspace{0.2 cm}
+
+\begin{onecolentry}
+  \textbf{High-Performance Computing:} MGHPCC Unity, Slurm orchestration, Parallel computing~(MPI, joblib), 
+  GPU acceleration~(PyTorch, CuPy)
+\end{onecolentry}
+
+\vspace{0.2 cm}
+
+\begin{onecolentry}
+  \textbf{Software Engineering:} Git/GitHub, (CI/CD)~GitHub Actions,  
+  Documentation, PyTest
+\end{onecolentry}
+
+\vspace{0.2 cm}
+
+\begin{onecolentry}
+  \textbf{Gravitational Wave Software:} \texttt{gwsurrogate}, \texttt{bilby}, \texttt{LALSuite}, 
+  \texttt{GWTools}
+\end{onecolentry}
+
+
 % ---- Publications ----
 \section{Publications}
 
@@ -454,6 +454,11 @@
           {Katie Rink, \textbf{Ritesh Bachhar}, Tousif Islam \textit{et al.}}
           {Physical Review D 110, 124069, December 2024}
           {https://journals.aps.org/prd/abstract/10.1103/PhysRevD.110.124069}
+
+    \item \publication{Binary Black Hole Coalescence Phenomenology from Numerical Relativity}
+          {Richard Price, \textbf{Ritesh Bachhar}, Gaurav Khanna}
+          {arXiv:2312.15885, Dec 2023}
+          {https://arxiv.org/abs/2312.15885}
 
     \item \publication{Angular Momentum for Black Hole Binaries in Numerical Relativity}
             {\textbf{Ritesh Bachhar}, Richard Price, Gaurav Khanna}
